--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 056071439513.dkr.ecr.us-east-1.amazonaws.com/my-docker-repo:latest
+        image: 056071439513.dkr.ecr.ap-south-1.amazonaws.com/my-docker-repo:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
